--- a/public/workout.html
+++ b/public/workout.html
@@ -1,51 +1,26 @@
-<!DOCTYPE html>
+\<!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
+  <meta charset="UTF-8" />
   <title>Create Workout</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-
-  <link rel="stylesheet" href="style.css">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+  <link rel="stylesheet" href="style.css" />
 
   <style>
-    /* === Page Background & Font === */
+    /* === General Page & Font === */
     html, body {
       height: 100%;
       margin: 0;
       padding: 0;
-      background-color: #020617; /* match app background */
+      background: #020617; /* consistent dark bg */
+      font-family: 'Inter', sans-serif;
       color: #ffffff;
-      font-family: 'Inter', sans-serif; /* match app font */
       overflow-x: hidden;
       overflow-y: auto;
       -webkit-overflow-scrolling: touch;
     }
 
-    /* === Page Layout === */
-    .page {
-      padding: 1rem;
-      min-height: 100%;
-      overflow-y: auto; /* vertical scroll */
-      display: flex;
-      justify-content: center;
-      align-items: flex-start; /* top alignment */
-    }
-
-    /* === Card / Container === */
-    .container {
-      width: 100%;
-      max-width: 500px; /* consistent width */
-      margin: 0 auto;
-    }
-
-    .card {
-      background-color: #111827; /* same as other cards */
-      border-radius: 12px;
-      padding: 1rem;
-      box-shadow: 0 4px 10px rgba(0,0,0,0.4);
-    }
-
-    /* === Top Navigation === */
+    /* === Sticky top nav === */
     .top-nav {
       position: sticky;
       top: 0;
@@ -59,12 +34,29 @@
       font-size: 1.2rem;
     }
 
-    /* === Back Button === */
-    .back-btn {
-      display: block;
-      width: fit-content;
-      margin: 0.5rem auto 1rem auto;
+    /* === Page container === */
+    .page {
+      padding: 1rem;
+    }
+
+    .container {
+      width: 100%;
+      max-width: 500px;
+      margin: 0 auto;
+    }
+
+    .card {
+      background: #111827; /* same as dashboard */
+      border-radius: 12px;
+      padding: 1rem;
+      box-shadow: 0 4px 10px rgba(0,0,0,0.4);
+    }
+
+    /* === Buttons === */
+    button {
+      width: 100%;
       padding: 0.5rem 1rem;
+      margin: 0.25rem 0;
       border-radius: 10px;
       border: none;
       background: #38bdf8;
@@ -74,11 +66,16 @@
       font-size: 0.9rem;
     }
 
-    .back-btn:hover {
+    button:hover {
       opacity: 0.85;
     }
 
-    /* === Input Fields === */
+    .back-btn {
+      display: inline-block;
+      margin: 0.5rem auto;
+      width: fit-content;
+    }
+
     input {
       width: 100%;
       padding: 0.5rem;
@@ -91,25 +88,7 @@
       font-size: 1rem;
     }
 
-    /* === Buttons === */
-    button {
-      padding: 0.5rem 1rem;
-      margin: 0.25rem 0;
-      border-radius: 8px;
-      border: none;
-      cursor: pointer;
-      font-weight: 600;
-      font-family: inherit;
-      width: 100%;
-      background: #38bdf8;
-      color: #020617;
-    }
-
-    button:hover {
-      opacity: 0.85;
-    }
-
-    /* === Exercise List === */
+    /* === Exercise list === */
     .exercise-item {
       margin-bottom: 1rem;
       border: 1px solid #1f2937;
