--- a/public/view.html
+++ b/public/view.html
@@ -3,41 +3,9 @@
 <head>
   <meta charset="UTF-8">
   <title>My Workouts</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
-
   <style>
-    /* --- Scrollable page while keeping UI --- */
-    html, body {
-      height: 100%;
-      margin: 0;
-      padding: 0;
-      overflow-x: hidden;           /* prevent horizontal scroll */
-      overflow-y: auto;             /* allow vertical scroll */
-      -webkit-overflow-scrolling: touch; /* smooth scroll on mobile */
-      font-family: system-ui, -apple-system, BlinkMacSystemFont, sans-serif;
-      background-color: #020617;    /* same background as app */
-    }
-
-    .page {
-      padding: 1rem;
-      min-height: 100%;
-      overflow-y: auto;
-    }
-
-    .container {
-      max-width: 600px;
-      margin: 0 auto;
-    }
-
-    .card {
-      background: #111827;
-      border-radius: 12px;
-      padding: 1rem;
-      margin-bottom: 1rem;
-      color: #ffffff;
-    }
-
     /* Sticky Top Navigation */
     .top-nav {
       position: sticky;
@@ -48,11 +16,10 @@
       padding: 1rem;
       text-align: center;
       font-weight: 600;
-      color: #38bdf8;
+      color: #38bdf8; /* blue theme */
       font-size: 1.2rem;
     }
 
-    /* Back Button */
     .back-btn {
       display: inline-block;
       margin: 0.5rem auto 1rem auto;
@@ -71,14 +38,16 @@
       opacity: 0.85;
     }
 
-    /* Exercise details and sets */
+    .page {
+      padding-top: 1rem;
+    }
+
     details.exercise {
       background: #020617;
       border: 1px solid #1f2937;
       border-radius: 12px;
       padding: 0.75rem;
       margin-bottom: 0.75rem;
-      color: #ffffff;
     }
 
     summary {
@@ -87,6 +56,35 @@
       display: flex;
       justify-content: space-between;
       align-items: center;
+    }
+
+    .exercise-details {
+      margin-top: 0.5rem;
+      padding-left: 0.5rem;
+    }
+
+    .exercise-name {
+      font-weight: 600;
+      margin-top: 0.5rem;
+    }
+
+    .set-item {
+      margin-left: 10px;
+      font-size: 0.9rem;
+      display: flex;
+      gap: 12px; /* space between left/right/weight */
+    }
+
+    .set-item span {
+      display: inline-block;
+      min-width: 50px; /* aligns nicely */
+    }
+
+    button.danger {
+      width: auto;
+      padding: 0.25rem 0.5rem;
+      font-size: 0.8rem;
+      margin-left: 0.5rem;
     }
 
     .summary-left {
@@ -102,42 +100,14 @@
     details[open] .summary-arrow {
       transform: rotate(90deg);
     }
-
-    .exercise-details {
-      margin-top: 0.5rem;
-      padding-left: 0.5rem;
-    }
-
-    .exercise-name {
-      font-weight: 600;
-      font-size: 1rem;
-      margin-top: 0.5rem;
-    }
-
-    .set-item {
-      margin-left: 10px;
-      font-size: 0.9rem;
-      display: flex;
-      gap: 12px;
-    }
-
-    .set-item span {
-      display: inline-block;
-      min-width: 50px;
-    }
-
-    button.danger {
-      width: auto;
-      padding: 0.25rem 0.5rem;
-      font-size: 0.8rem;
-      margin-left: 0.5rem;
-    }
   </style>
 </head>
 <body>
 
 <!-- NAV BAR -->
-<div class="top-nav">Ascend</div>
+<div class="top-nav">
+  Ascend
+</div>
 
 <!-- Back Button -->
 <div style="text-align:center;">
@@ -147,12 +117,18 @@
 <div class="page">
   <div class="container">
     <div class="card">
+
       <h2>My Workouts</h2>
       <div id="workoutsList"></div>
 
-      <button type="button" class="secondary" onclick="location.href='workout.html'">
+      <button
+        type="button"
+        class="secondary"
+        onclick="location.href='workout.html'"
+      >
         Create New Workout
       </button>
+
     </div>
   </div>
 </div>
