--- a/public/view.html
+++ b/public/view.html
@@ -16,7 +16,7 @@
       padding: 1rem;
       text-align: center;
       font-weight: 600;
-      color: #38bdf8; /* blue theme */
+      color: #38bdf8;
       font-size: 1.2rem;
     }
 
@@ -38,8 +38,34 @@
       opacity: 0.85;
     }
 
+    /* PAGE LAYOUT */
     .page {
+      display: flex;
+      flex-direction: column;
       padding-top: 1rem;
+      max-height: calc(100vh - 60px); /* adjust based on nav height */
+    }
+
+    .container {
+      flex: 1;
+      display: flex;
+      flex-direction: column;
+      overflow: hidden; /* prevents double scroll */
+    }
+
+    .card {
+      flex: 1;
+      display: flex;
+      flex-direction: column;
+      overflow: hidden; /* scroll inside workouts list only */
+    }
+
+    /* SCROLLABLE WORKOUTS AREA */
+    #workoutsList {
+      flex: 1;
+      margin-top: 0.5rem;
+      overflow-y: auto;
+      -webkit-overflow-scrolling: touch; /* smooth mobile scrolling */
     }
 
     details.exercise {
@@ -72,12 +98,12 @@
       margin-left: 10px;
       font-size: 0.9rem;
       display: flex;
-      gap: 12px; /* space between left/right/weight */
+      gap: 12px;
     }
 
     .set-item span {
       display: inline-block;
-      min-width: 50px; /* aligns nicely */
+      min-width: 50px;
     }
 
     button.danger {
