--- a/public/workout.html
+++ b/public/workout.html
@@ -1,13 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  
   <meta charset="UTF-8" />
   <title>Create Workout</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="stylesheet" href="style.css" />
   <style>
-    /* Sticky Top Navigation (refined to match app style) */
+    /* Sticky Top Navigation */
     .top-nav {
       position: sticky;
       top: 0;
@@ -17,7 +16,7 @@
       padding: 1rem;
       text-align: center;
       font-weight: 600;
-      color: #38bdf8; /* matches blue theme */
+      color: #38bdf8;
       font-size: 1.2rem;
     }
 
@@ -38,14 +37,34 @@
       opacity: 0.85;
     }
 
-    /* Ensure page content isn't hidden under sticky nav */
+    /* PAGE LAYOUT */
     .page {
+      display: flex;
+      flex-direction: column;
       padding-top: 1rem;
+      max-height: calc(100vh - 60px); /* adjust based on nav height */
+    }
 
-      /* ALLOW VERTICAL SCROLLING */
-      max-height: calc(100vh - 60px); /* adjust if needed based on nav height */
+    .container {
+      flex: 1;
+      display: flex;
+      flex-direction: column;
+      overflow: hidden; /* prevents double scroll */
+    }
+
+    .card {
+      flex: 1;
+      display: flex;
+      flex-direction: column;
+      overflow: hidden; /* scroll inside exercise list only */
+    }
+
+    /* SCROLLABLE EXERCISES AREA */
+    #exerciseList {
+      flex: 1;
+      margin-top: 0.5rem;
       overflow-y: auto;
-      -webkit-overflow-scrolling: touch; /* smooth scrolling on mobile */
+      -webkit-overflow-scrolling: touch; /* smooth mobile scrolling */
     }
   </style>
 </head>
@@ -55,6 +74,8 @@
 <div class="top-nav">
   Ascend
 </div>
+
+<!-- Back Button -->
 <div style="text-align:center;">
   <button class="back-btn" onclick="window.location.href='dashboard.html'">← Back to Dashboard</button>
 </div>
@@ -65,6 +86,7 @@
 
       <input id="workoutName" placeholder="Workout name" />
 
+      <!-- Scrollable exercises list -->
       <div id="exerciseList"></div>
 
       <button type="button" id="addExercise">Add Exercise</button>
