--- a/public/workout.html
+++ b/public/workout.html
@@ -37,34 +37,30 @@
       opacity: 0.85;
     }
 
-    /* PAGE LAYOUT */
+    /* Ensure page content isn't hidden under sticky nav */
     .page {
-      display: flex;
-      flex-direction: column;
       padding-top: 1rem;
-      max-height: calc(100vh - 60px); /* adjust based on nav height */
     }
 
+    /* Scrollable content area only as exercises grow */
     .container {
-      flex: 1;
       display: flex;
       flex-direction: column;
-      overflow: hidden; /* prevents double scroll */
     }
 
     .card {
-      flex: 1;
       display: flex;
       flex-direction: column;
-      overflow: hidden; /* scroll inside exercise list only */
+      gap: 0.5rem;
     }
 
-    /* SCROLLABLE EXERCISES AREA */
     #exerciseList {
-      flex: 1;
-      margin-top: 0.5rem;
+      display: flex;
+      flex-direction: column;
+      gap: 0.5rem;
       overflow-y: auto;
-      -webkit-overflow-scrolling: touch; /* smooth mobile scrolling */
+      max-height: 70vh; /* limits initial height, grows as needed */
+      -webkit-overflow-scrolling: touch;
     }
   </style>
 </head>
@@ -75,7 +71,6 @@
   Ascend
 </div>
 
-<!-- Back Button -->
 <div style="text-align:center;">
   <button class="back-btn" onclick="window.location.href='dashboard.html'">← Back to Dashboard</button>
 </div>
@@ -86,7 +81,6 @@
 
       <input id="workoutName" placeholder="Workout name" />
 
-      <!-- Scrollable exercises list -->
       <div id="exerciseList"></div>
 
       <button type="button" id="addExercise">Add Exercise</button>
