--- a/public/workout.html
+++ b/public/workout.html
@@ -38,11 +38,20 @@
     }
 
     /* Ensure page content isn't hidden under sticky nav */
-    .page {
-      padding-top: 1rem;
+    body, html {
+      margin: 0;
+      padding: 0;
+      height: 100%;
+      overflow-y: auto; /* allow full-page vertical scrolling */
+      -webkit-overflow-scrolling: touch; /* smooth scroll on mobile */
     }
 
-    /* Scrollable content area only as exercises grow */
+    .page {
+      padding-top: 1rem;
+      padding-bottom: 2rem;
+    }
+
+    /* Container and card styling remain unchanged */
     .container {
       display: flex;
       flex-direction: column;
@@ -58,9 +67,8 @@
       display: flex;
       flex-direction: column;
       gap: 0.5rem;
-      overflow-y: auto;
-      max-height: 70vh; /* limits initial height, grows as needed */
-      -webkit-overflow-scrolling: touch;
+      /* Remove fixed max-height so scrolling is handled by page */
+      overflow: visible;
     }
   </style>
 </head>
