PWA-ready index.html

--- a/public/workout.html
+++ b/public/workout.html
@@ -1,4 +1,4 @@
-]<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
@@ -38,7 +38,7 @@
     }
 
     /* Full-page scroll */
-    body, html {
+    html, body {
       margin: 0;
       padding: 0;
       height: 100%;
@@ -80,7 +80,7 @@
 
     /* Sets container scroll */
     .sets-list {
-      max-height: 150px; /* adjust based on preference */
+      max-height: 150px; /* adjust if needed */
       overflow-y: auto;
       margin-top: 0.5rem;
       -webkit-overflow-scrolling: touch; /* smooth scrolling on mobile */
@@ -115,6 +115,7 @@
   </div>
 </div>
 
+<!-- Popup for saving workout -->
 <div id="popup" class="popup hidden">Workout Saved!</div>
 
 <script src="workouts.js"></script>
