--- a/public/workout.html
+++ b/public/workout.html
@@ -5,6 +5,7 @@
   <title>Create Workout</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="stylesheet" href="style.css" />
+
   <style>
     /* Sticky Top Navigation */
     .top-nav {
@@ -37,7 +38,7 @@
       opacity: 0.85;
     }
 
-    /* Full-page scroll */
+    /* MAIN PAGE SCROLL — ALWAYS ENABLED */
     html, body {
       margin: 0;
       padding: 0;
@@ -59,65 +60,58 @@
     .card {
       display: flex;
       flex-direction: column;
-      gap: 0.5rem;
+      gap: 0.75rem;
     }
 
+    /* SHARED EXERCISE LIST SCROLL */
     #exerciseList {
+      max-height: 60vh;          /* controls when list starts scrolling */
+      overflow-y: auto;
       display: flex;
       flex-direction: column;
       gap: 0.5rem;
-    }
-
-    /* Individual exercise card */
-    .exercise-item {
-      background: #020617;
-      border: 1px solid #1f2937;
-      border-radius: 10px;
-      padding: 0.5rem;
-      display: flex;
-      flex-direction: column;
-    }
-
-    /* Sets container scroll */
-    .sets-list {
-      max-height: 150px; /* adjust if needed */
-      overflow-y: auto;
-      margin-top: 0.5rem;
-      -webkit-overflow-scrolling: touch; /* smooth scrolling on mobile */
+      -webkit-overflow-scrolling: touch;
     }
   </style>
 </head>
 <body>
 
-<!-- NAV BAR -->
-<div class="top-nav">Ascend</div>
+  <!-- NAV BAR -->
+  <div class="top-nav">Ascend</div>
 
-<div style="text-align:center;">
-  <button class="back-btn" onclick="window.location.href='dashboard.html'">← Back to Dashboard</button>
-</div>
+  <div style="text-align:center;">
+    <button class="back-btn" onclick="window.location.href='dashboard.html'">
+      ← Back to Dashboard
+    </button>
+  </div>
 
-<div class="page">
-  <div class="container">
-    <div class="card">
+  <div class="page">
+    <div class="container">
+      <div class="card">
 
-      <input id="workoutName" placeholder="Workout name" />
+        <input id="workoutName" placeholder="Workout name" />
 
-      <div id="exerciseList"></div>
+        <!-- EXERCISES SCROLL TOGETHER HERE -->
+        <div id="exerciseList"></div>
 
-      <button type="button" id="addExercise">Add Exercise</button>
-      <button type="button" id="saveWorkout">Save Workout</button>
+        <button type="button" id="addExercise">Add Exercise</button>
+        <button type="button" id="saveWorkout">Save Workout</button>
 
-      <button type="button" class="secondary" onclick="location.href='view.html'">
-        View My Workouts
-      </button>
+        <button
+          type="button"
+          class="secondary"
+          onclick="location.href='view.html'"
+        >
+          View My Workouts
+        </button>
 
+      </div>
     </div>
   </div>
-</div>
 
-<!-- Popup for saving workout -->
-<div id="popup" class="popup hidden">Workout Saved!</div>
+  <!-- Popup -->
+  <div id="popup" class="popup hidden">Workout Saved!</div>
 
-<script src="workouts.js"></script>
+  <script src="workouts.js"></script>
 </body>
 </html>
