--- a/public/workout.html
+++ b/public/workout.html
@@ -1,6 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <!-- Status bar / browser UI colour -->
+<meta name="theme-color" content="#111827">
+
+<!-- iOS PWA status bar -->
+<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+<meta name="apple-mobile-web-app-capable" content="yes">
+
   <meta charset="UTF-8" />
   <title>Create Workout</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
