PWA-ready index.html

--- a/public/workout.html
+++ b/public/workout.html
@@ -108,7 +108,7 @@
   </button>
 
   <button data-page="view" onclick="location.href='view.html'">
-    <span class="icon">  <img src="workouts.png" alt="Workouts" class="tab-icon" /></span>
+    <span class="icon">📋</span>
     <span class="label">Workouts</span>
   </button>
 
