PWA-ready index.html

--- a/public/workout.html
+++ b/public/workout.html
@@ -108,7 +108,9 @@
   </button>
 
   <button data-page="view" onclick="location.href='view.html'">
-    <span class="icon">📋</span>
+    <span class="icon">
+        <img src="icons/workouts.png" alt="Home" class="nav-icon">
+    </span>
     <span class="label">Workouts</span>
   </button>
 
