--- a/public/workout.html
+++ b/public/workout.html
@@ -103,20 +103,18 @@
   <script src="workouts.js"></script>
   <nav class="bottom-nav">
   <button data-page="dashboard" onclick="location.href='dashboard.html'">
-    <span class="icon">
-      <img src="icons/home.png" alt="Home" class="nav-icon">
-    </span>
+    <span class="icon">🏠</span>
     <span class="label">Home</span>
   </button>
 
   <button data-page="view" onclick="location.href='view.html'">
     <span class="icon">
-      <img src="icons/workouts.png" alt="Workouts" class="nav-icon">
+        <img src="icons/workouts.png" alt="Home" class="nav-icon">
     </span>
     <span class="label">Workouts</span>
   </button>
 
-  <!-- CENTER CREATE BUTTON (UNCHANGED) -->
+  <!-- CENTER CREATE BUTTON -->
   <button
     data-page="workout"
     class="create-btn"
@@ -126,20 +124,15 @@
   </button>
 
   <button data-page="stats" disabled>
-    <span class="icon">
-      <img src="icons/stats.png" alt="Stats" class="nav-icon">
-    </span>
+    <span class="icon">📊</span>
     <span class="label">Stats</span>
   </button>
 
   <button data-page="profile" disabled>
-    <span class="icon">
-      <img src="icons/profile.png" alt="Profile" class="nav-icon">
-    </span>
+    <span class="icon">👤</span>
     <span class="label">Profile</span>
   </button>
 </nav>
-
 <script>
   const current = location.pathname.split("/").pop().replace(".html", "");
 
