PWA-ready index.html

--- a/public/view.html
+++ b/public/view.html
@@ -257,7 +257,7 @@ loadWorkouts();
 
   <button data-page="stats" disabled>
     <span class="icon">📊</span>
-    <span class="label">Stats</span>
+    <span class="label">Analytics</span>
   </button>
 
   <button data-page="profile" disabled>
