--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -104,7 +104,7 @@ function goBack() {
 
   <button data-page="stats" disabled>
     <span class="icon">📊</span>
-    <span class="label">Stats</span>
+    <span class="label">Analytics</span>
   </button>
 
   <button data-page="profile" disabled>
