--- a/public/workout.html
+++ b/public/workout.html
@@ -65,6 +65,11 @@
       height: auto !important;
       overflow: visible !important;
     }
+
+    /* HIDE ANY STRAY ICONS INSIDE PAGE CONTENT */
+    .page .icon {
+      display: none;
+    }
   </style>
 </head>
 
@@ -102,46 +107,47 @@
 
   <script src="workouts.js"></script>
   <nav class="bottom-nav">
-  <button data-page="dashboard" onclick="location.href='dashboard.html'">
-    <span class="icon">🏠</span>
-    <span class="label">Home</span>
-  </button>
+    <button data-page="dashboard" onclick="location.href='dashboard.html'">
+      <span class="icon">🏠</span>
+      <span class="label">Home</span>
+    </button>
 
-  <button data-page="view" onclick="location.href='view.html'">
-    <span class="icon">
-        <img src="icons/workouts.png" alt="Home" class="nav-icon">
-    </span>
-    <span class="label">Workouts</span>
-  </button>
+    <button data-page="view" onclick="location.href='view.html'">
+      <span class="icon">
+          <img src="icons/workouts.png" alt="Workouts" class="nav-icon">
+      </span>
+      <span class="label">Workouts</span>
+    </button>
 
-  <!-- CENTER CREATE BUTTON -->
-  <button
-    data-page="workout"
-    class="create-btn"
-    onclick="location.href='workout.html'"
-  >
-    <span class="icon">＋</span>
-  </button>
+    <!-- CENTER CREATE BUTTON -->
+    <button
+      data-page="workout"
+      class="create-btn"
+      onclick="location.href='workout.html'"
+    >
+      <span class="icon">＋</span>
+    </button>
 
-  <button data-page="stats" disabled>
-    <span class="icon">📊</span>
-    <span class="label">Analytics</span>
-  </button>
+    <button data-page="stats" disabled>
+      <span class="icon">📊</span>
+      <span class="label">Analytics</span>
+    </button>
 
-  <button data-page="profile" disabled>
-    <span class="icon">👤</span>
-    <span class="label">Profile</span>
-  </button>
-</nav>
-<script>
-  const current = location.pathname.split("/").pop().replace(".html", "");
+    <button data-page="profile" disabled>
+      <span class="icon">👤</span>
+      <span class="label">Profile</span>
+    </button>
+  </nav>
 
-  document.querySelectorAll(".bottom-nav button").forEach(btn => {
-    if (btn.dataset.page === current) {
-      btn.classList.add("active");
-    }
-  });
-</script>
+  <script>
+    const current = location.pathname.split("/").pop().replace(".html", "");
+
+    document.querySelectorAll(".bottom-nav button").forEach(btn => {
+      if (btn.dataset.page === current) {
+        btn.classList.add("active");
+      }
+    });
+  </script>
 
 </body>
 </html>
