--- a/public/workout.html
+++ b/public/workout.html
@@ -2,11 +2,9 @@
 <html lang="en">
 <head>
   <!-- Status bar / browser UI colour -->
-<meta name="theme-color" content="#111827">
-
-<!-- iOS PWA status bar -->
-<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
-<meta name="apple-mobile-web-app-capable" content="yes">
+  <meta name="theme-color" content="#111827">
+  <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+  <meta name="apple-mobile-web-app-capable" content="yes">
 
   <meta charset="UTF-8" />
   <title>Create Workout</title>
@@ -66,9 +64,9 @@
       overflow: visible !important;
     }
 
-    /* HIDE ANY STRAY ICONS INSIDE PAGE CONTENT */
-    .page .icon {
-      display: none;
+    /* HIDE ANY STRAY ICONS INSIDE PAGE (except create button) */
+    .page .icon:not(.create-btn .icon) {
+      display: none !important;
     }
   </style>
 </head>
@@ -106,6 +104,8 @@
   <div id="popup" class="popup hidden">Workout Saved!</div>
 
   <script src="workouts.js"></script>
+
+  <!-- BOTTOM NAVIGATION -->
   <nav class="bottom-nav">
     <button data-page="dashboard" onclick="location.href='dashboard.html'">
       <span class="icon">🏠</span>
@@ -114,7 +114,7 @@
 
     <button data-page="view" onclick="location.href='view.html'">
       <span class="icon">
-          <img src="icons/workouts.png" alt="Workouts" class="nav-icon">
+        <img src="icons/workouts.png" alt="Workouts" class="nav-icon">
       </span>
       <span class="label">Workouts</span>
     </button>
