PWA-ready index.html

--- a/public/workout.html
+++ b/public/workout.html
@@ -113,9 +113,7 @@
     </button>
 
     <button data-page="view" onclick="location.href='view.html'">
-      <span class="icon">
-        <img src="icons/workouts.png" alt="Workouts" class="nav-icon">
-      </span>
+      <span class="icon">📋</span>
       <span class="label">Workouts</span>
     </button>
 
