--- a/public/view.html
+++ b/public/view.html
@@ -235,14 +235,19 @@ function loadWorkouts() {
 
 loadWorkouts();
 </script>
+<!-- BOTTOM NAVIGATION -->
 <nav class="bottom-nav">
   <button data-page="dashboard" onclick="location.href='dashboard.html'">
-    <span class="icon">🏠</span>
+    <span class="icon">
+      <img src="icons/home.png" alt="Home" class="nav-icon">
+    </span>
     <span class="label">Home</span>
   </button>
 
   <button data-page="view" onclick="location.href='view.html'">
-    <span class="icon">📋</span>
+    <span class="icon">
+      <img src="icons/workouts.png" alt="Workouts" class="nav-icon">
+    </span>
     <span class="label">Workouts</span>
   </button>
 
@@ -256,15 +261,20 @@ loadWorkouts();
   </button>
 
   <button data-page="stats" disabled>
-    <span class="icon">📊</span>
+    <span class="icon">
+      <img src="icons/analytics.png" alt="Analytics" class="nav-icon">
+    </span>
     <span class="label">Analytics</span>
   </button>
 
   <button data-page="profile" disabled>
-    <span class="icon">👤</span>
+    <span class="icon">
+      <img src="icons/profile.png" alt="Profile" class="nav-icon">
+    </span>
     <span class="label">Profile</span>
   </button>
 </nav>
+
 <script>
   const current = location.pathname.split("/").pop().replace(".html", "");
 
