--- a/public/workout.html
+++ b/public/workout.html
@@ -106,36 +106,46 @@
   <script src="workouts.js"></script>
 
   <!-- BOTTOM NAVIGATION -->
-  <nav class="bottom-nav">
-    <button data-page="dashboard" onclick="location.href='dashboard.html'">
-      <span class="icon">🏠</span>
-      <span class="label">Home</span>
-    </button>
+  <!-- BOTTOM NAVIGATION -->
+<nav class="bottom-nav">
+  <button data-page="dashboard" onclick="location.href='dashboard.html'">
+    <span class="icon">
+      <img src="icons/home.png" alt="Home" class="nav-icon">
+    </span>
+    <span class="label">Home</span>
+  </button>
 
-    <button data-page="view" onclick="location.href='view.html'">
-      <span class="icon">📋</span>
-      <span class="label">Workouts</span>
-    </button>
+  <button data-page="view" onclick="location.href='view.html'">
+    <span class="icon">
+      <img src="icons/workouts.png" alt="Workouts" class="nav-icon">
+    </span>
+    <span class="label">Workouts</span>
+  </button>
 
-    <!-- CENTER CREATE BUTTON -->
-    <button
-      data-page="workout"
-      class="create-btn"
-      onclick="location.href='workout.html'"
-    >
-      <span class="icon">＋</span>
-    </button>
+  <!-- CENTER CREATE BUTTON -->
+  <button
+    data-page="workout"
+    class="create-btn"
+    onclick="location.href='workout.html'"
+  >
+    <span class="icon">＋</span>
+  </button>
 
-    <button data-page="stats" disabled>
-      <span class="icon">📊</span>
-      <span class="label">Analytics</span>
-    </button>
+  <button data-page="stats" disabled>
+    <span class="icon">
+      <img src="icons/analytics.png" alt="Analytics" class="nav-icon">
+    </span>
+    <span class="label">Analytics</span>
+  </button>
 
-    <button data-page="profile" disabled>
-      <span class="icon">👤</span>
-      <span class="label">Profile</span>
-    </button>
-  </nav>
+  <button data-page="profile" disabled>
+    <span class="icon">
+      <img src="icons/profile.png" alt="Profile" class="nav-icon">
+    </span>
+    <span class="label">Profile</span>
+  </button>
+</nav>
+
 
   <script>
     const current = location.pathname.split("/").pop().replace(".html", "");
