--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -93,7 +93,7 @@ function goBack() {
 
   <button data-page="view" onclick="location.href='view.html'">
     <span class="icon">
-      <img src="icons/workouts.png" alt="Workouts" class="nav-icon">
+      <img src="icons/workout.png" alt="Workouts" class="nav-icon">
     </span>
     <span class="label">Workouts</span>
   </button>
