--- a/public/view.html
+++ b/public/view.html
@@ -246,7 +246,7 @@ loadWorkouts();
 
   <button data-page="view" onclick="location.href='view.html'">
     <span class="icon">
-      <img src="icons/workouts.png" alt="Workouts" class="nav-icon">
+      <img src="icons/workout.png" alt="Workouts" class="nav-icon">
     </span>
     <span class="label">Workouts</span>
   </button>
