--- a/public/workout.html
+++ b/public/workout.html
@@ -117,7 +117,7 @@
 
   <button data-page="view" onclick="location.href='view.html'">
     <span class="icon">
-      <img src="icons/workouts.png" alt="Workouts" class="nav-icon">
+      <img src="icons/workout.png" alt="Workouts" class="nav-icon">
     </span>
     <span class="label">Workouts</span>
   </button>
