PWA-ready index.html

--- a/public/workout.html
+++ b/public/workout.html
@@ -108,6 +108,7 @@
   <!-- BOTTOM NAVIGATION -->
   <!-- BOTTOM NAVIGATION -->
 <nav class="bottom-nav">
+  <!-- Home -->
   <button data-page="dashboard" onclick="location.href='dashboard.html'">
     <span class="icon">
       <img src="icons/home.png" alt="Home" class="nav-icon">
@@ -115,6 +116,7 @@
     <span class="label">Home</span>
   </button>
 
+  <!-- Workouts -->
   <button data-page="view" onclick="location.href='view.html'">
     <span class="icon">
       <img src="icons/workout.png" alt="Workouts" class="nav-icon">
@@ -122,7 +124,7 @@
     <span class="label">Workouts</span>
   </button>
 
-  <!-- CENTER CREATE BUTTON -->
+  <!-- CENTER CREATE BUTTON (UNCHANGED) -->
   <button
     data-page="workout"
     class="create-btn"
@@ -131,6 +133,7 @@
     <span class="icon">＋</span>
   </button>
 
+  <!-- Analytics -->
   <button data-page="stats" disabled>
     <span class="icon">
       <img src="icons/analytics.png" alt="Analytics" class="nav-icon">
@@ -138,6 +141,7 @@
     <span class="label">Analytics</span>
   </button>
 
+  <!-- Profile -->
   <button data-page="profile" disabled>
     <span class="icon">
       <img src="icons/profile.png" alt="Profile" class="nav-icon">
