--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -84,6 +84,7 @@ function goBack() {
 </script>
 <!-- BOTTOM NAVIGATION -->
 <nav class="bottom-nav">
+  <!-- Home -->
   <button data-page="dashboard" onclick="location.href='dashboard.html'">
     <span class="icon">
       <img src="icons/home.png" alt="Home" class="nav-icon">
@@ -91,6 +92,7 @@ function goBack() {
     <span class="label">Home</span>
   </button>
 
+  <!-- Workouts -->
   <button data-page="view" onclick="location.href='view.html'">
     <span class="icon">
       <img src="icons/workout.png" alt="Workouts" class="nav-icon">
@@ -98,7 +100,7 @@ function goBack() {
     <span class="label">Workouts</span>
   </button>
 
-  <!-- CENTER CREATE BUTTON -->
+  <!-- CENTER CREATE BUTTON (UNCHANGED) -->
   <button
     data-page="workout"
     class="create-btn"
@@ -107,6 +109,7 @@ function goBack() {
     <span class="icon">＋</span>
   </button>
 
+  <!-- Analytics -->
   <button data-page="stats" disabled>
     <span class="icon">
       <img src="icons/analytics.png" alt="Analytics" class="nav-icon">
@@ -114,6 +117,7 @@ function goBack() {
     <span class="label">Analytics</span>
   </button>
 
+  <!-- Profile -->
   <button data-page="profile" disabled>
     <span class="icon">
       <img src="icons/profile.png" alt="Profile" class="nav-icon">
@@ -121,6 +125,7 @@ function goBack() {
     <span class="label">Profile</span>
   </button>
 </nav>
+
 
 <script>
   const current = location.pathname.split("/").pop().replace(".html", "");
