--- a/public/view.html
+++ b/public/view.html
@@ -237,6 +237,7 @@ loadWorkouts();
 </script>
 <!-- BOTTOM NAVIGATION -->
 <nav class="bottom-nav">
+  <!-- Home -->
   <button data-page="dashboard" onclick="location.href='dashboard.html'">
     <span class="icon">
       <img src="icons/home.png" alt="Home" class="nav-icon">
@@ -244,6 +245,7 @@ loadWorkouts();
     <span class="label">Home</span>
   </button>
 
+  <!-- Workouts -->
   <button data-page="view" onclick="location.href='view.html'">
     <span class="icon">
       <img src="icons/workout.png" alt="Workouts" class="nav-icon">
@@ -251,7 +253,7 @@ loadWorkouts();
     <span class="label">Workouts</span>
   </button>
 
-  <!-- CENTER CREATE BUTTON -->
+  <!-- CENTER CREATE BUTTON (UNCHANGED) -->
   <button
     data-page="workout"
     class="create-btn"
@@ -260,6 +262,7 @@ loadWorkouts();
     <span class="icon">＋</span>
   </button>
 
+  <!-- Analytics -->
   <button data-page="stats" disabled>
     <span class="icon">
       <img src="icons/analytics.png" alt="Analytics" class="nav-icon">
@@ -267,6 +270,7 @@ loadWorkouts();
     <span class="label">Analytics</span>
   </button>
 
+  <!-- Profile -->
   <button data-page="profile" disabled>
     <span class="icon">
       <img src="icons/profile.png" alt="Profile" class="nav-icon">
@@ -274,6 +278,7 @@ loadWorkouts();
     <span class="label">Profile</span>
   </button>
 </nav>
+
 
 <script>
   const current = location.pathname.split("/").pop().replace(".html", "");
