PWA-ready index.html

--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -87,7 +87,7 @@ function goBack() {
   <!-- Home -->
   <button data-page="dashboard" onclick="location.href='dashboard.html'">
     <span class="icon">
-      <img src="icons/home.png" alt="Home" class="nav-icon">
+      <img src="/icons/home.png" alt="Home" class="nav-icon">
     </span>
     <span class="label">Home</span>
   </button>
@@ -95,7 +95,7 @@ function goBack() {
   <!-- Workouts -->
   <button data-page="view" onclick="location.href='view.html'">
     <span class="icon">
-      <img src="icons/workout.png" alt="Workouts" class="nav-icon">
+      <img src="/icons/workout.png" alt="Workouts" class="nav-icon">
     </span>
     <span class="label">Workouts</span>
   </button>
@@ -112,7 +112,7 @@ function goBack() {
   <!-- Analytics -->
   <button data-page="stats" disabled>
     <span class="icon">
-      <img src="icons/analytics.png" alt="Analytics" class="nav-icon">
+      <img src="/icons/analytics.png" alt="Analytics" class="nav-icon">
     </span>
     <span class="label">Analytics</span>
   </button>
@@ -120,7 +120,7 @@ function goBack() {
   <!-- Profile -->
   <button data-page="profile" disabled>
     <span class="icon">
-      <img src="icons/profile.png" alt="Profile" class="nav-icon">
+      <img src="/icons/profile.png" alt="Profile" class="nav-icon">
     </span>
     <span class="label">Profile</span>
   </button>
