--- a/public/workout.html
+++ b/public/workout.html
@@ -111,7 +111,7 @@
   <!-- Home -->
   <button data-page="dashboard" onclick="location.href='dashboard.html'">
     <span class="icon">
-      <img src="icons/home.png" alt="Home" class="nav-icon">
+      <img src="/icons/home.png" alt="Home" class="nav-icon">
     </span>
     <span class="label">Home</span>
   </button>
@@ -136,7 +136,7 @@
   <!-- Analytics -->
   <button data-page="stats" disabled>
     <span class="icon">
-      <img src="icons/analytics.png" alt="Analytics" class="nav-icon">
+      <img src="/icons/analytics.png" alt="Analytics" class="nav-icon">
     </span>
     <span class="label">Analytics</span>
   </button>
@@ -144,7 +144,7 @@
   <!-- Profile -->
   <button data-page="profile" disabled>
     <span class="icon">
-      <img src="icons/profile.png" alt="Profile" class="nav-icon">
+      <img src="/icons/profile.png" alt="Profile" class="nav-icon">
     </span>
     <span class="label">Profile</span>
   </button>
