--- a/public/view.html
+++ b/public/view.html
@@ -240,7 +240,7 @@ loadWorkouts();
   <!-- Home -->
   <button data-page="dashboard" onclick="location.href='dashboard.html'">
     <span class="icon">
-      <img src="icons/home.png" alt="Home" class="nav-icon">
+      <img src="/icons/home.png" alt="Home" class="nav-icon">
     </span>
     <span class="label">Home</span>
   </button>
@@ -248,7 +248,7 @@ loadWorkouts();
   <!-- Workouts -->
   <button data-page="view" onclick="location.href='view.html'">
     <span class="icon">
-      <img src="icons/workout.png" alt="Workouts" class="nav-icon">
+      <img src="/icons/workout.png" alt="Workouts" class="nav-icon">
     </span>
     <span class="label">Workouts</span>
   </button>
@@ -265,7 +265,7 @@ loadWorkouts();
   <!-- Analytics -->
   <button data-page="stats" disabled>
     <span class="icon">
-      <img src="icons/analytics.png" alt="Analytics" class="nav-icon">
+      <img src="/icons/analytics.png" alt="Analytics" class="nav-icon">
     </span>
     <span class="label">Analytics</span>
   </button>
@@ -273,7 +273,7 @@ loadWorkouts();
   <!-- Profile -->
   <button data-page="profile" disabled>
     <span class="icon">
-      <img src="icons/profile.png" alt="Profile" class="nav-icon">
+      <img src="/icons/profile.png" alt="Profile" class="nav-icon">
     </span>
     <span class="label">Profile</span>
   </button>
