PWA-ready index.html

--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -47,7 +47,8 @@
 <div class="top-nav">Ascend</div>
 
 <div style="text-align:center;">
-  <button class="logout-btn" onclick="logout()">Logout</button>
+<button id="logoutBtn">Logout</button>
+
 </div>
 
 <div class="page">
@@ -154,6 +155,5 @@ function goBack() {
   });
 </script>
 <script src="planner.js"></script>
-
 </body>
 </html>
