PWA-ready index.html

--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -160,7 +160,7 @@ function goBack() {
     if (logoutBtn) {
       logoutBtn.addEventListener("click", () => {
         localStorage.clear();
-        window.location.href = "login.html";
+        window.location.href = "index.html";
       });
     }
   });
